Fix h3 background vertical align bug

--- a/swimapp/static/swimapp/css/style.css
+++ b/swimapp/static/swimapp/css/style.css
@@ -153,7 +153,7 @@ body{
   border-radius: 33.5px;
   box-shadow: 0 0 8.7px 1.3px rgba(0, 120, 255, 0.5);
   background-color: #ffffff;
-  font-size: 45px;
+  font-size: 40px;
   font-weight: bold;
   line-height: 1;
   letter-spacing: -1.13px;
@@ -209,12 +209,13 @@ body{
   color: #ffffff;
   background-color: #0090ff;
   height: 32px;
-  display: flex;
-  align-items: center;
-  width: 116px;
+  line-height: 32px;
+  display: inline-block;
   margin: 0 auto 30px auto;
 }
 
+.priceBg{
+}
 
 .container{
   text-align: center;
